--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         applicationId = "com.example.r_w_r"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 24
         targetSdk = 36
         versionCode = flutter.versionCode
         versionName = flutter.versionName
