--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.0.0
+  exprollable_page_view: ^1.0.3
   http: ^1.3.0
   video_player: ^2.9.5
   flutter_bloc: ^9.1.1
@@ -35,7 +36,7 @@ dependencies:
   geolocator: 13.0.4
   firebase_core: ^3.13.0
   url_launcher: ^6.3.1
-  webview_flutter: ^4.11.0
+  webview_flutter: ^4.13.0
   camera: ^0.11.2
   google_mlkit_face_detection: ^0.13.1
   dropdown_search: ^6.0.2
