--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   equatable: ^2.0.7
   cached_network_image: ^3.4.1
   flutter_svg: ^2.1.0
+  carousel_slider: ^5.1.1
   #  visibility_detector: ^0.4.0+2
   image_picker: ^1.1.2
   fl_chart: ^0.71.0
